--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
 .bar {
   fill: red;
 }
-#neighborhood-chart .bar:hover {
+/*#neighborhood-chart .bar:hover {
   mode: false;
   fill: steelblue;
 }
-
+*/
 /*.hover: { mode: false }
 .x.axis path {
   display: none;
@@ -20,12 +20,19 @@
     margin-bottom: 20px;
   }
 
-.map {
+
+path {
+  stroke: white;
+  stroke-width: 0.25px;
+  fill: grey;
+}
+
+/*.map {
     display: inline-block;
     height: 151px;
     margin-bottom: 20px;
   }
-
+*/
 
 
 /*#charts {
