--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,21 @@
   transition: fill-opacity 250ms linear;
 }
 
+#crime-type-chart .x.axis text {
+  text-anchor: end;
+}
+
+#crime-type-chart svg {
+  overflow: visible;
+}
+
+#neighborhood-chart .x.axis text {
+  text-anchor: end;
+}
+
+#neighborhood-chart svg {
+  overflow: visible;
+}
 
 /*#hour-chart .bar {
   fill-opacity: 0.2;
