--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,36 @@
 
-p1 {
+p5 {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 16px;
+  margin-left: 10;
+}
+
+p1{
+  margin-left: 10;
+}
+
+p2{
+  margin-left: 10;
+}
+
+p3{
+  margin-left: 10;
+}
+
+p4{
+  margin-left: 10;
+}
+
+p6{
+  margin-left: 10;
+}
+
+p7{
+  margin-left: 10;
+}
+
+h2 {
+  margin-left: 10;
 }
 
 .title {
